tagged_by_update

--- a/_posts/2021-07-09-toc.md
+++ b/_posts/2021-07-09-toc.md
@@ -3,7 +3,8 @@ layout: single
 title:  "TOC (Table Of Contents)"
 toc: true
 toc_sticky: true
-categories: jekyll
+categories: [jekyll]
+tags: [Test,Test2,Test3]
 ---
 
 TOC (Table of Contents)를 실험하기 위한 포스트   
