--- a/_posts/2021-07-09-toc.md
+++ b/_posts/2021-07-09-toc.md
@@ -1,13 +1,15 @@
 ---
+last_modified_at :
 layout: single
 title:  "TOC (Table Of Contents)"
-toc: true
-toc_sticky: true
 categories: [jekyll]
 tags: [Test,Test2,Test3]
+
+toc: true
+toc_sticky: true
 ---
 
-TOC (Table of Contents)를 실험하기 위한 포스트   
+TOC (Table of Contents)를 실험하기 위한 포스트.
 h2 태그로 제목을 쓰면 오른쪽 사이드바에 TOC를 보여줄 수 있다.
 
 ## 1. YAML 헤더
