side_bar_update

--- a/_posts/2021-07-09-toc.md
+++ b/_posts/2021-07-09-toc.md
@@ -1,16 +1,17 @@
 ---
-last_modified_at : 2021-07-12
+last_modified_at : 2021-07-13
 layout: single
 title:  "TOC (Table Of Contents)"
-categories: jekyll
-tags: [TOC,테이블 개요,테이블 요약]
+categories: blog
+tags: [jekyll]
 
 toc: true
 toc_sticky: true
 ---
 
-TOC (Table of Contents)를 실험하기 위한 포스트.
-h2 태그로 제목을 쓰면 오른쪽 사이드바에 TOC를 보여줄 수 있다.
+TOC (Table of Contents)를 실험하기 위한 포스트.  
+h2 태그로 제목을 쓰면 오른쪽 사이드바에 TOC를 보여줄 수 있다.  
+모바일에서는 그냥 본문위에 표시됨.
 
 ## 1. YAML 헤더
 ```yaml
@@ -25,3 +26,11 @@ toc_sticky: true
 
 ## 3. 가나다라마바사
 아자차카타파하
+
+<h2>마크다운안에서 html</h2>
+여기선 h2를 html로 작성함.  
+마크다운 안에서 html이 작성되는지 확인  
+=> 작성은 되는데 TOC에는 노출이 안됨
+```html
+<h2>마크다운안에서 html</h2>
+```
