--- a/_posts/2021-07-11-test.md
+++ b/_posts/2021-07-11-test.md
@@ -1,8 +1,8 @@
 ---
-last_modified_at : 2021-07-12
+last_modified_at : 2021-07-11
 layout: single
 title:  "Test"
-categories: Test
+categories: test
 tags : [Test,Test2]
 ---
 
