category_bar_update

--- a/_posts/2021-07-11-test.md
+++ b/_posts/2021-07-11-test.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-07-11
 layout: single
 title:  "Test"
 categories: test
-tags : [Test,Test2]
+tags : test
 ---
 
 테스트용 포스트입니다.
