--- a/_posts/2021-07-09-toc.md
+++ b/_posts/2021-07-09-toc.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-07-13
 layout: single
 title:  "TOC (Table Of Contents)"
 categories: blog
-tags: [jekyll]
+tags: jekyll
 
 toc: true
 toc_sticky: true
