--- a/_posts/2021-07-09-toc.md
+++ b/_posts/2021-07-09-toc.md
@@ -9,9 +9,8 @@ toc: true
 toc_sticky: true
 ---
 
-TOC (Table of Contents)를 실험하기 위한 포스트.  
-h2 태그로 제목을 쓰면 오른쪽 사이드바에 TOC를 보여줄 수 있다.  
-모바일에서는 그냥 본문위에 표시됨.
+TOC (Table of Contents)를 실험하기 위한 포스트입니다.  
+h2 태그로 제목을 쓰면 오른쪽 사이드바에 TOC를 보여줄 수 있습니다. 모바일에서는 그냥 본문위에 표시됩니다.
 
 ## 1. YAML 헤더
 ```yaml
@@ -28,9 +27,9 @@ toc_sticky: true
 아자차카타파하
 
 <h2>마크다운안에서 html</h2>
-여기선 h2를 html로 작성함.  
+여기선 h2를 html로 작성했습니다.
 마크다운 안에서 html이 작성되는지 확인  
-=> 작성은 되는데 TOC에는 노출이 안됨
+=> 작성은 되는데 TOC에는 노출은 안됩니다.
 ```html
 <h2>마크다운안에서 html</h2>
 ```
