--- a/_posts/2021-07-09-toc.md
+++ b/_posts/2021-07-09-toc.md
@@ -9,8 +9,7 @@ toc: true
 toc_sticky: true
 ---
 ## 서론
-TOC (Table of Contents)를 실험하기 위한 포스트입니다.  
-h2 태그로 제목을 쓰면 오른쪽 사이드바에 TOC를 보여줄 수 있습니다. 모바일에서는 그냥 본문 위에 표시됩니다.
+TOC (Table of Contents)를 실험하기 위한 포스트입니다. h2 태그로 제목을 쓰면 오른쪽 사이드바에 TOC를 보여줄 수 있습니다. 모바일에서는 그냥 본문 위에 표시됩니다.
 
 ## 1. YAML 헤더
 아래와 같이 YAML헤더를 추가합니다.
@@ -28,8 +27,7 @@ toc_sticky: true
 
 <h2>마크다운 안에서 html</h2>
 여기선 h2를 html로 작성했습니다.
-마크다운 안에서 html이 작성되는지 확인  
-=> 작성은 되는데 TOC에는 노출은 안 됩니다.
+=> html로 작성은 되는데 TOC에는 노출은 안 됩니다.
 ```html
 <h2>마크다운 안에서 html</h2>
 ```
