--- a/_posts/2021-07-20-BOJ_6549.md
+++ b/_posts/2021-07-20-BOJ_6549.md
@@ -115,4 +115,4 @@ while True:
 ```
 
 ## 생각
-문제의 해답을 설명한 글은 아닙니다. 그냥 문제를 푸는데 너무 많이 틀려서 처음부터 주어진 조건을 가지고 분석을 한 후 문제를 푸는 것이 맞는 거 같아 생각하는 순서를 한번 적어봤습니다.
+문제의 해답을 설명한 글은 아닙니다. 그냥 문제를 푸는데 조건에 걸려서 틀리는 경우가 너무 많아서 처음부터 주어진 조건을 가지고 분석을 한 후 문제를 푸는 것이 맞는 것 같아 생각하는 순서를 한번 적어봤습니다.
