--- a/_posts/2021-07-20-BOJ_6549.md
+++ b/_posts/2021-07-20-BOJ_6549.md
@@ -26,7 +26,7 @@ toc_sticky: true
 데이터 자체를 전부 다 저장해도 충분해 보이는데 저 같은 경우 자꾸 틀려서 생각해 보니 함수에서 인자로 데이터 배열을 받아서였습니다. 인자로 데이터를 받을 때마다 복사해서 새로운 메모리를 차지하고 분할정복의 경우 필연적으로 함수가 재귀로 여러 번 호출되기 때문에 256MB를 넘어서 틀리는 거였습니다. 따라서 분할정복을 사용하지 않거나 분할정복 사용 시 데이터는 전역변수로 두고 인덱스값으로 데이터를 참조해야 합니다.
 
 ## 분할 정복 O(nlogn)
-데이터를 계속 절반씩 나눠서 검증하는 분할정복입니다. 검증하는 부분에서 절반을 기준으로 인덱스를 좌우로 한 개씩 늘려가며 최대넓이를 찾습니다. 절반씩 분할정복을 하므로 logn, 검증하는 방법에서 최악의 경우 n의 시간복잡도를 가지기 때문에 O(nlogn)의 시간복잡도를 가지게 됩니다. 데이터를 인덱스로 참조하기 때문에 공간복잡도 문제도 없습니다.
+데이터를 계속 절반씩 나누고 나눠진 부분에 대해서 처리하는 분할정복입니다. 나눠진 부분을 기준으로 인덱스를 좌우로 한 개씩 늘려가며 최대넓이를 찾습니다. 절반씩 분할정복을 하므로 logn, 검증하는 방법에서 최악의 경우 n의 시간복잡도를 가지기 때문에 O(nlogn)의 시간복잡도를 가지게 됩니다. 데이터를 인덱스로 참조하기 때문에 공간복잡도 문제도 없습니다.
 ```python
 import sys
 sys.setrecursionlimit(10**6)
