--- a/_posts/2021-07-20-BOJ_6549.md
+++ b/_posts/2021-07-20-BOJ_6549.md
@@ -23,10 +23,12 @@ toc_sticky: true
   <li>메모리 제한 - 1초</li>
 </ul>
 백준을 풀면서 메모리 제한은 그렇게 크게 생각하지를 않았는데 이번 문제 풀면서 너무 많이 틀려서 이 조건도 생각해 보게 되었습니다. 메모리 제한은 256MB이고 문제에서 데이터의 개수는 최댓값 10억을 가지는 10만 개의 데이터입니다. 파이썬의 경우 arbitrary precision을 가지지만 그래도 계산을 해보자면 4바이트 int형에 -20억~20억 정도의 데이터를 담을 수 있으니 데이터 한 개의 크기를 4바이트로 잡고 10만 개, 40만 바이트, 즉 총 데이터 메모리는 4MB입니다.  
+
 데이터 자체를 전부 다 저장해도 충분해 보이는데 자꾸 틀려서 생각해 보니 함수에서 인자로 데이터 배열을 받아서였습니다. 인자로 데이터를 받을 때마다 복사해서 새로운 메모리를 차지하고 분할정복의 경우 필연적으로 함수가 재귀로 여러 번 호출되기 때문에 256MB를 넘어서 틀리는 거였습니다. 따라서 분할정복을 사용하지 않거나 분할정복 사용 시 데이터는 전역변수로 두고 인덱스값으로 데이터를 참조해야 합니다.
 
 ## 분할 정복 O(nlogn)
-데이터를 계속 절반씩 나누고 나눠진 부분에 대해서 처리하는 분할정복입니다. 나누어졌을 때 최솟값은 히스토그램 한 개만 남을 때이며 이때는 그냥 히스토그램의 넓이를 리턴합니다. 나눠진 부분처리는 절반을 기준으로 인덱스를 좌우로 한 개씩 늘려가며 최대넓이를 찾습니다.
+데이터를 계속 절반씩 나누고 나눠진 부분에 대해서 처리하는 분할정복입니다. 나누어졌을 때 최솟값은 히스토그램 한 개만 남을 때이며 이때는 그냥 히스토그램의 넓이를 리턴합니다. 나눠진 부분처리는 절반을 기준으로 인덱스를 좌우로 한 개씩 늘려가며 최대넓이를 찾습니다.  
+
 절반씩 분할정복을 하므로 logn, 나눠진 부분을 처리하는 방법에서 최악의 경우 n의 시간복잡도를 가지기 때문에 O(nlogn)의 시간복잡도를 가지게 됩니다. 데이터를 인덱스로 참조하기 때문에 공간복잡도 문제도 없습니다.
 ```python
 import sys
@@ -85,7 +87,10 @@ while True:
 
 ## 스택 O(n)
 스택으로도 푸는 방법이 있다고 하여 스택으로도 풀어보려고 했으나 실패하고 결국 찾아보고 풀어보게 되었습니다.  
-데이터 전체를 따라가며 조건에 의해 스택에 넣고 조건이 맞지 않는 경우 스택 안의 데이터를 팝 시키며 최대넓이를 찾는 방법입니다. 이 경우 for문안에 while문이 나와서 정확하게 시간복잡도가 계산되진 않지만, 보통의 경우 스택으로 문제를 풀 게 되면 O(n)의 시간복잡도를 가진다고 합니다. 역시 데이터를 인덱스로 참조하기 때문에 공간복잡도 문제도 없습니다.
+
+데이터 전체를 따라가며 조건에 의해 스택에 넣고 조건이 맞지 않는 경우 스택 안의 데이터를 팝 시키며 최대넓이를 찾는 방법입니다.  
+
+이 경우 for문안에 while문이 나와서 정확하게 시간복잡도가 계산되진 않지만, 보통의 경우 스택으로 문제를 풀 게 되면 O(n)의 시간복잡도를 가진다고 합니다. 역시 데이터를 인덱스로 참조하기 때문에 공간복잡도 문제도 없습니다.
 ```python
 import sys
 from collections import deque as dq
