--- a/_posts/2021-07-20-BOJ_6549.md
+++ b/_posts/2021-07-20-BOJ_6549.md
@@ -86,7 +86,7 @@ while True:
 ```
 
 ## 스택 O(n)
-스택으로도 푸는 방법이 있다고 하여 스택으로도 풀어보려고 했으나 실패하고 결국 찾아보고 풀어보게 되었습니다.  
+스택으로도 푸는 방법이 있다고 하여 혼자서 스택으로 풀어보려고 했으나 실패하고 결국 찾아보고 풀어보게 되었습니다.  
 
 데이터 전체를 따라가며 조건에 의해 스택에 넣고 조건이 맞지 않는 경우 스택 안의 데이터를 팝 시키며 최대넓이를 찾는 방법입니다.  
 
