--- a/_posts/2021-07-21-BOJ_2261.md
+++ b/_posts/2021-07-21-BOJ_2261.md
@@ -22,7 +22,7 @@ toc_sticky: true
 <ul>
   <li>메모리 제한 - 1초</li>
 </ul>
-메모리 제한은 256MB입니다. 데이터의 개수는 절댓값 1만을 넘지 않는 10만 개의 데이터입니다. 데이터는 4바이트 int형의 데이터가 한 좌표마다 2개씩 있으니 20만 개, 80만 바이트 즉 총 데이터 메모리는 8MB입니다.  
+메모리 제한은 256MB입니다. 데이터의 개수는 절댓값 1만을 넘지 않는 10만 개의 데이터입니다. 데이터는 4바이트 int형의 데이터가 한 좌표마다 2개씩 있으니 20만 개, 80만 바이트 즉 총 데이터 메모리는 800KB입니다.  
 
 데이터를 담을 메모리 조건은 충분하고 분할정복에서 틀리기 쉬운 recursion 형식으로 메모리를 복사하는 것만 주의하면 됩니다. 함수에서 데이터를 호출할 때 인자로 넘기지 말고 데이터는 전역변수로 두고 인덱스값만 넘기면서 코딩하였습니다.
 
