--- a/_posts/2021-07-20-BOJ_6549.md
+++ b/_posts/2021-07-20-BOJ_6549.md
@@ -22,7 +22,7 @@ toc_sticky: true
 <ul>
   <li>메모리 제한 - 1초</li>
 </ul>
-백준을 풀면서 메모리 제한은 그렇게 크게 생각하지를 않았는데 이번 문제 풀면서 너무 많이 틀려서 이 조건도 생각해 보게 되었습니다. 메모리 제한은 256MB이고 문제에서 데이터의 개수는 최댓값 10억을 가지는 10만 개의 데이터입니다. 파이썬의 경우 arbitrary precision을 가지지만 그래도 계산을 해보자면 4바이트 int형에 -20억~20억 정도의 데이터를 담을 수 있으니 데이터 한 개의 크기를 4바이트로 잡고 10만 개, 40만 바이트, 즉 총 데이터 메모리는 4MB입니다.  
+백준을 풀면서 메모리 제한은 그렇게 크게 생각하지를 않았는데 이번 문제 풀면서 너무 많이 틀려서 이 조건도 생각해 보게 되었습니다. 메모리 제한은 256MB이고 문제에서 데이터의 개수는 최댓값 10억을 가지는 10만 개의 데이터입니다. 파이썬의 경우 arbitrary precision을 가지지만 그래도 계산을 해보자면 4바이트 int형에 -20억~20억 정도의 데이터를 담을 수 있으니 데이터 한 개의 크기를 4바이트로 잡고 10만 개, 40만 바이트, 즉 총 데이터 메모리는 400KB입니다.  
 
 데이터 자체를 전부 다 저장해도 충분해 보이는데 자꾸 틀려서 생각해 보니 함수에서 인자로 데이터 배열을 받아서였습니다. 인자로 데이터를 받을 때마다 복사해서 새로운 메모리를 차지하고 분할정복의 경우 필연적으로 함수가 재귀로 여러 번 호출되기 때문에 256MB를 넘어서 틀리는 거였습니다. 따라서 분할정복을 사용하지 않거나 분할정복 사용 시 데이터는 전역변수로 두고 인덱스값으로 데이터를 참조해야 합니다.
 
