--- a/_posts/2021-07-21-BOJ_2261.md
+++ b/_posts/2021-07-21-BOJ_2261.md
@@ -20,7 +20,7 @@ toc_sticky: true
 </ul>
 시간제한은 1초입니다. 일반적인 컴퓨터로 1초에 1억 번 연산한다는 기준을 가지고 풉니다. 데이터의 개수는 10만 개입니다. O(n^2)로 문제를 풀 게 되면 루프 안에서 O(1)로 연산을 해도 100억 번의 연산이 필요하므로 명백하게 O(n^2)보다 빠른 알고리즘으로 푸는 문제입니다.
 <ul>
-  <li>메모리 제한 - 1초</li>
+  <li>메모리 제한 - 256MB</li>
 </ul>
 메모리 제한은 256MB입니다. 데이터의 개수는 절댓값 1만을 넘지 않는 10만 개의 데이터입니다. 데이터는 4바이트 int형의 데이터가 한 좌표마다 2개씩 있으니 20만 개, 80만 바이트 즉 총 데이터 메모리는 800KB입니다.  
 
