--- a/_posts/2021-07-20-BOJ_6549.md
+++ b/_posts/2021-07-20-BOJ_6549.md
@@ -20,7 +20,7 @@ toc_sticky: true
 </ul>
 시간제한은 1초입니다. 저는 일반적인 컴퓨터로 1초에 1억 번 연산한다는 기준으로 문제를 풀고 있습니다. 데이터의 개수는 10만 개입니다. O(n^2)으로 문제를 풀 게 되면 루프 안에서 O(1)로 연산을 해도 100억 번의 연산이 필요하므로 명백하게 O(n^2)보다 빠른 알고리즘으로 푸는 문제입니다. 지금 와서 이렇게 분석했지만, 처음에 풀 때는 그냥 O(n^2)으로도 풀어봤습니다. 역시 틀렸습니다.
 <ul>
-  <li>메모리 제한 - 1초</li>
+  <li>메모리 제한 - 256MB</li>
 </ul>
 백준을 풀면서 메모리 제한은 그렇게 크게 생각하지를 않았는데 이번 문제 풀면서 너무 많이 틀려서 이 조건도 생각해 보게 되었습니다. 메모리 제한은 256MB이고 문제에서 데이터의 개수는 최댓값 10억을 가지는 10만 개의 데이터입니다. 파이썬의 경우 arbitrary precision을 가지지만 그래도 계산을 해보자면 4바이트 int형에 -20억~20억 정도의 데이터를 담을 수 있으니 데이터 한 개의 크기를 4바이트로 잡고 10만 개, 40만 바이트, 즉 총 데이터 메모리는 400KB입니다.  
 
