--- a/_posts/2021-07-30-BOJ_7576.md
+++ b/_posts/2021-07-30-BOJ_7576.md
@@ -81,5 +81,47 @@ print(bfs(start_list))
 ## 생각
 그래도 풀면서 나름 신선했던 문제 같아서 기록해봤는데 또 그 정도 문제는 아닌 것 같습니다. BFS, DFS 문제를 빨리 쭉쭉 풀어봐야겠습니다.
 
+### *추가
+같은 카테고리의 다른 문제들을 풀다 보면 더 좋은 코드가 생각나는데 이번에도 구분자를 넣는 새로운 방법이 생각나서 적습니다. 사실 큐 안에 구분자를 넣는다는 건 큐의 데이터 형식을 훼손하는 개념이었습니다. 제어할 수 있는 값이라고 해도 처음부터 [y, x]라는 좌표 데이터를 넣는다고 설계했는데 [-1,-1]을 넣게 되면서 코드가 조금 이상해지지 않았나 생각을 했습니다.  
 
+그래서 생각한 게 처음부터 [y, x]를 큐에 넣는 게 아니라 [y, x, day]를 큐에 넣는 방법입니다. 이렇게 하면 따로 구분자를 걸러내야 하는 조건 없이도 그냥 그 자체로 day 값을 가지게 됩니다. 적어 놓고 보니 BFS에서 최단 거리를 찾는 개념과 비슷합니다. 사소한 부분이고 성능에도 크게 영향을 미칠 것 같진 않지만, 코드가 더 이쁜 것 같습니다. 전체 코드는 아래와 같습니다.
+```python
+import sys
+from collections import deque as dq
+input = sys.stdin.readline
 
+m,n = map(int,input().split())
+map = [list(map(int,input().split())) for __ in range(n)]
+
+def bfs(start_list):
+    bfs = dq()
+    ## 탐색을 시작해야 하는 출발지가 여러 개기 때문에 여러 개 넣습니다.
+    ## 구분자를 삭제했습니다.
+    for starty,startx in start_list:
+        bfs.append([starty, startx, 0])
+    dy = [-1, 0, 1, 0]
+    dx = [0, 1, 0, -1]
+
+    while bfs:
+        basey, basex, day = bfs.popleft()
+        for i in range(4):
+            y = basey+dy[i]
+            x = basex+dx[i]
+            if (y >= 0 and y < n) and (x >= 0 and x < m) and map[y][x] == 0:
+                map[y][x] = 1
+                ## 이런식으로 day값을 컨트롤합니다.
+                bfs.append([y, x, day+1])
+    ## 모든 행동을 끝냈는데 map에 아직 0이 남아있다면 토마토를 다 익힐 수없는 경우입니다.
+    for row in map:
+        if 0 in row:
+            return -1
+    return day
+
+start_list = []
+for i in range(n):
+    for j in range(m):
+        if map[i][j] == 1:
+            start_list.append([i,j])
+
+print(bfs(start_list))
+```
