--- a/_posts/2021-08-08-RL_gym.md
+++ b/_posts/2021-08-08-RL_gym.md
@@ -32,11 +32,12 @@ for _ in range(1000):
     env.step(env.action_space.sample()) # take a random action
 env.close()
 ```
+<p>
 <video loop="" style="max-width:100%;width:300px;margin-left: auto; margin-right: auto; display: block;" controls="">
   <source src="http://s3-us-west-2.amazonaws.com/rl-gym-doc/cartpole-no-reset.mp4" type="video/mp4">
 </video>
-
-CartPole이라는 게임을 env으로 제공해준 건데 코드 자체는 어렵지 않습니다. `env.render()`를 통해서 env을 보여주고 `env.step(env.action_space.sample())`을 통해서 env에 action을 줍니다. 여기선 랜덤한 action을 줘서 그냥 막대기가 바로 쓰러지고 끝납니다. 학습시킨 액션을 주게 되면 이제 막대기가 서 있을 것 같습니다.
+</p>
+CartPole이라는 게임(막대기를 쓰러뜨리지 않는 게임)을 env으로 제공해준 건데 코드 자체는 어렵지 않습니다. `env.render()`를 통해서 env을 보여주고 `env.step(env.action_space.sample())`을 통해서 env에 action을 줍니다. 여기선 랜덤한 action을 줘서 그냥 막대기가 바로 쓰러지고 끝납니다. 학습시킨 액션을 주게 되면 이제 막대기가 서 있을 것 같습니다.
 
 ### 관찰
 위에서 사용한 step()이라는 함수는 4가지 값을 리턴합니다.
@@ -61,8 +62,10 @@ for i_episode in range(20):
             break
 env.close()
 ```
+<p>
 <video style="max-width:100%;width:300px;margin-left: auto; margin-right: auto; display: block;" controls="">
   <source src="http://s3-us-west-2.amazonaws.com/rl-gym-doc/cartpole-yes-reset.mp4" type="video/mp4"></video>
+</p>
 이런 식으로 테스트를 하면 한 에피소드에서 랜덤한 action을 취했을 때 몇 t 동안 버티는지를 보여줍니다. done 값이 env가 끝나면 true를 리턴하기 때문입니다. 오 신기합니다. 이런 env자체를 사용해서 이제 강화학습을 공부할 수 있을 것 같습니다. 
 
 gym 문서에 더 많은 내용이 있습니다. 들어가 보시면 Cartpole에 대한 자세한 설명도 쓰여 있고 다른 env들도 많습니다. 들어가 보시길 추천해 드립니다.
