--- a/_posts/2021-08-07-BOJ_1753.md
+++ b/_posts/2021-08-07-BOJ_1753.md
@@ -57,7 +57,7 @@ def make_graph(vertex_num, edge_num):
     return graph
 
 
-def BFS(graph, dist_list):
+def Dijkstra(graph, dist_list):
     heap = []
     heapq.heappush(heap, [0, vertex_start])
 
