--- a/_posts/2021-08-14-BOJ_9370.md
+++ b/_posts/2021-08-14-BOJ_9370.md
@@ -24,9 +24,9 @@ toc_sticky: true
 메모리 제한은 256MB입니다. 그래프를 탐색하는 문제를 풀다 보니 기본적으로 그래프 자체를 선언하거나, 일반적으로 사용하는 visited나 dist_list, DP 등을 선언하는 데는 메모리 제한이 크게 문제가 되지 않습니다. 하지만 탐색하는 과정에서 이문제에서는 힙을 사용하는데 조건을 제대로 주어서 힙에 너무 많은 데이터가 쌓이지 않게 해야 합니다. 결론적으로는 알고리즘을 잘 짜야 하겠습니다.
 
 ## BFS
-정석적인 방법은 기본적인 Dijkstra 함수를 구현하고 목적지 후보로 가는 최단 경로를 구하고 g, h를 거쳐 가는 최단 경로를 구했을 때 두 개가 같으면 목적지 후보가 될 수 있는 것이고, 같지 않으면 후보에서 제외하면 됩니다.
+정석적인 방법은 기본적인 Dijkstra 함수를 구현하고 목적지 후보로 가는 최단 경로를 구하고 g, h를 거쳐 가는 최단 경로를 구했을 때 두 개가 같으면 g, h를 거쳐서 최단 경로가 되었기 때문에 목적지 후보가 될 수 있는 것이고, 같지 않으면 후보에서 제외하면 됩니다.
 
-그런데 위에서처럼 하게 되면 Dijkstra 함수를 세 번 사용해야 하고, start->g->h->목적지 후보의 경우나 start->h->g->목적지 후보의 경우를 생각해야 합니다. 하지만 Dijkstra 한 번으로 목적지 후보로의 최단 경로가 g->h, h->g 경로를 확인할 방법이 있습니다.  
+그런데 위에서처럼 하게 되면 Dijkstra 함수를 세 번 사용해야 하고, start->g->h->목적지 후보의 경우나 start->h->g->목적지 후보의 경우를 생각해야 합니다. 하지만 Dijkstra 한 번으로 목적지 후보로의 최단 경로가 g->h, h->g 경로를 지나 왔는지 확인할 방법이 있습니다.  
 
 바로 g, h를 포함하는 경로에는 홀수값을 주고 그 외 경로는 모두 짝수 값을 주는 것입니다. 이렇게 되면 목적지 후보의 최단 경로가 홀수인 경우는 g, h 경로를 지나왔다는 소리가 되고 짝수이면 지나오지 않았다는 소리가 됩니다. *2, *2-1을 하더라도 수의 대소관계는 유지된다는 전제가 있기 때문에 가능합니다. 또 *2+1, *2-1을 선택할 때에는 -1을 선택해야 합니다. 만약 g, h를 거치지 않는 경로와 거치는 경로가 값이 같을 때, g, h를 거쳐서도 갈 수 있다는 소리가 되기 때문에 g, h를 먼저 선택해서 마지막 값에 홀수 값이 반영돼야 하기 때문입니다.  
 
