--- a/_posts/2021-08-14-BOJ_9370.md
+++ b/_posts/2021-08-14-BOJ_9370.md
@@ -23,7 +23,7 @@ toc_sticky: true
 </ul>
 메모리 제한은 256MB입니다. 그래프를 탐색하는 문제를 풀다 보니 기본적으로 그래프 자체를 선언하거나, 일반적으로 사용하는 visited나 dist_list, DP 등을 선언하는 데는 메모리 제한이 크게 문제가 되지 않습니다. 하지만 탐색하는 과정에서 이문제에서는 힙을 사용하는데 조건을 제대로 주어서 힙에 너무 많은 데이터가 쌓이지 않게 해야 합니다. 결론적으로는 알고리즘을 잘 짜야 하겠습니다.
 
-## BFS
+## Dijkstra
 정석적인 방법은 기본적인 Dijkstra 함수를 구현하고 목적지 후보로 가는 최단 경로를 구하고 g, h를 거쳐 가는 최단 경로를 구했을 때 두 개가 같으면 g, h를 거쳐서 최단 경로가 되었기 때문에 목적지 후보가 될 수 있는 것이고, 같지 않으면 후보에서 제외하면 됩니다.
 
 그런데 위에서처럼 하게 되면 Dijkstra 함수를 세 번 사용해야 하고, start->g->h->목적지 후보의 경우나 start->h->g->목적지 후보의 경우를 생각해야 합니다. 하지만 Dijkstra 한 번으로 목적지 후보로의 최단 경로가 g->h, h->g 경로를 지나 왔는지 확인할 방법이 있습니다.  
@@ -85,9 +85,9 @@ for __ in range(tc):
         if dist_list[i] % 2 != 0:
             print(i, end=' ')
     print()
-
-
 ```
 
 ## 생각
 대단한 아이디어인 것 같습니다.
+### *추가
+그래프탐색 관련 포스팅을 하면서 node라는 단어와 vertex라는 단어를 혼용해서 쓴 거 같은데 앞으로는 vertex, 정점이라는 단어를 사용하도록 하겠습니다.
