--- a/_posts/2021-08-14-BOJ_11657.md
+++ b/_posts/2021-08-14-BOJ_11657.md
@@ -21,12 +21,12 @@ toc_sticky: true
 <ul>
   <li>메모리 제한 - 256MB</li>
 </ul>
-메모리 제한은 256MB입니다. 그래프를 탐색하는 문제를 풀다 보니 기본적으로 그래프 자체를 선언하거나, 일반적으로 사용하는 visited나 dist_list, DP 등을 선언하는 데는 메모리 제한이 크게 문제가 되지 않습니다. 또 Bellman-Ford 알고리즘은 따른 자료구조를 사용하지 않고 for 문만을 돌리기 때문에 메모리 제한은 충분합니다.
+메모리 제한은 256MB입니다. 그래프를 탐색하는 문제를 풀다 보니 기본적으로 그래프 자체를 선언하거나, 일반적으로 사용하는 visited나 dist_list, DP 등을 선언하는 데는 메모리 제한이 크게 문제가 되지 않습니다. 또 Bellman-Ford 알고리즘은 Dijkstra에서 사용하는 힙같은 다른 자료구조를 사용하지 않고 for 문만을 돌리기 때문에 메모리 제한은 충분합니다.
 
 ## Bellman-Ford
 시작정점을 기준으로 모든 정점까지의 최단 거리를 구해야 하는 문제이지만 가중치에 음수가 있습니다. 따라서 Dijkstra를 사용하지 못하고, Bellman-Ford를 사용해야 합니다.  
 
-여기서 edge relaxation이라는 개념이 등장하는데 이것은 모든 edge 정보를 가지고 도착정점의 최단 거리가 시작정점+weight의 값보다 작으면 도착정점의 최단 거리를 갱신하는 것입니다. 전체적인 Bellman-Ford의 흐름은 아래와 같습니다.
+여기서 edge relaxation이라는 개념이 등장하는데 이것은 모든 edge 정보를 가지고 도착정점의 최단 거리가 시작정점+weight의 값보다 작으면 도착정점의 최단 거리를 갱신하는 것입니다. 코드로 보는게 더 쉬울 것 같습니다. 전체적인 Bellman-Ford의 흐름은 아래와 같습니다.
 1. edge relaxation을 하기 위해서 시작정점의 최단 거리를 0으로 설정합니다.
 2. 최단 거리가 갱신된 정점에서만 edge relaxation을 합니다.
 3. 1-2 과정을 vertex_num-1번 수행합니다.
