--- a/_posts/2021-08-07-BOJ_1753.md
+++ b/_posts/2021-08-07-BOJ_1753.md
@@ -28,7 +28,7 @@ toc_sticky: true
 메모리 제한은 256MB입니다. 문제를 풀기 위해선 경로들의 정보를 담고 있는 그래프와 시작노드에서의 최단 거리를 담고 있는 리스트가 필요합니다. 그래프는 한 노드를 기준으로 인접노드와 그에 대한 가중치 정보를 담고 있으니 (20,000+300,000\*2)\*28byte의 크기를 가지고 최단 거리를 담고 있는 리스트는 20,000\*28byte의 크기를 가집니다. 총 18MB 정도의 크기를 가지기 때문에 메모리 제한은 문제가 없습니다.  
 
 ## Dijkstra
-시작노드를 기준으로 모든 노드까지의 최단 거리를 구해야 하는 문제입니다. 문제를 해결하기 위한 Dijkstra 알고리즘의 기본적인 동작은 다음과 같습니다.
+시작노드를 기준으로 모든 노드까지의 최단 거리를 구해야 하는 문제입니다. 문제를 해결하기 위한 Dijkstra 알고리즘의 기본적인 동작은 다음과 같습니다. 시작 정점에서의 최단 거리를 담고있는 최단거리 리스트를 사용합니다.(`dist_list[vertex_num]`)
 1. 한 노드를 시작으로 인접노드를 탐색한다.
 2. 시작한 노드까지의 최단 거리 + 인접노드의 가중치를 계산한다.
 3. 위의 값이 현재 인접노드가 가지고 있는 최단 거리보다 작으면 최단 거리를 갱신한다.
