--- a/_posts/2021-08-14-BOJ_11657.md
+++ b/_posts/2021-08-14-BOJ_11657.md
@@ -26,7 +26,7 @@ toc_sticky: true
 ## Bellman-Ford
 시작정점을 기준으로 모든 정점까지의 최단 거리를 구해야 하는 문제이지만 가중치에 음수가 있습니다. 따라서 Dijkstra를 사용하지 못하고, Bellman-Ford를 사용해야 합니다.  
 
-여기서 edge relaxation이라는 개념이 등장하는데 이것은 모든 edge 정보를 가지고 도착정점의 최단 거리가 시작정점+weight의 값보다 작으면 도착정점의 최단 거리를 갱신하는 것입니다. 코드로 보는게 더 쉬울 것 같습니다. 전체적인 Bellman-Ford의 흐름은 아래와 같습니다.
+여기서 edge relaxation이라는 개념이 등장하는데 이것은 모든 edge 정보를 가지고 도착정점의 최단 거리가 시작정점+weight의 값보다 작으면 도착정점의 최단 거리를 갱신하는 것입니다. 코드로 보는게 더 쉬울 것 같습니다. 시작 정점에서의 최단 거리를 담고있는 최단거리 리스트를 사용합니다.(`dist_list[vertex_num]`).전체적인 Bellman-Ford의 흐름은 아래와 같습니다.
 1. edge relaxation을 하기 위해서 시작정점의 최단 거리를 0으로 설정합니다.
 2. 최단 거리가 갱신된 정점에서만 edge relaxation을 합니다.
 3. 1-2 과정을 vertex_num-1번 수행합니다.
@@ -78,3 +78,4 @@ else:
 ```
 
 ## 생각
+처음에는 왜 edge-relaxation을 vertex_num-1번 해야 하는가를 이해하지 못했지만 간단하게 생각하면 vertex 간의 가장 많이 떨어진 거리가 vertex_num-1이기 때문입니다. 따라서 vertex_num-1번 수행하게 되면 가장 많이 떨어진 거리의 vertex도 update 되게 됩니다.
