--- a/_posts/2021-08-14-BOJ_11404.md
+++ b/_posts/2021-08-14-BOJ_11404.md
@@ -1,5 +1,5 @@
 ---
-last_modified_at : 2021-08-14
+last_modified_at : 2021-08-16
 layout : single
 title:  "백준 11657번 Floyd-Warshall"
 categories: BOJ
@@ -26,7 +26,7 @@ toc_sticky: true
 ## Floyd-Warshall
 모든 정점에서 모든 정점까지의 최단 거리를 구해야 하는 문제이기 때문에 Floyd-Warshall 알고리즘을 사용해야 합니다. 모든 정점에서의 최단 거리를 담고 있는 최단 거리 리스트를 사용합니다. (`dist_list[vertex_num][vertex_num]`) row는 시작 정점이고 col은 도착 정점입니다. 즉 dist_list[3][4] = 10이면 정점 3에서 시작해서 정점 4로 가는 최단 거리는 10이라는 소리입니다.  
 
-이 알고리즘의 아이디어는 모든 정점을 하나하나 선택하여 모든 최단 거리를 갱신하는 것인데, 현재는 왜 이렇게 하면 모든 정점에서 모든 정점으로의 최단 거리가 나오는지 확실하게 이해를 못 해서 코드로만 구현했습니다. 코드는 아래와 같습니다.
+이 알고리즘은 mid라는 중간 점을 두고 시작->mid->끝의 모든 경로를 확인하여 최단 경로를 갱신합니다.
 ```python
 import sys
 input = sys.stdin.readline
@@ -70,4 +70,68 @@ for row in dist_list:
 ```
 
 ## 생각
-그러니까 왜 저렇게 3중 for 문을 지나면 dist_list의 모든 값이 최단 거리가 되는지 정확하게 이해를 못 했습니다. 왜 그렇게 되는 걸까요…. 알게 되면 다시 적도록 하겠습니다.
+
+### *추가
+위의 방법은 최단 경로에 따른 weight 값만 갱신하기 때문에 최단 경로 자체는 구하지 못합니다. 최단 경로를 구하려면 최단 경로에서 이전 vertex를 담고 있는 list를 한 개 더 사용하면 됩니다. 아래 코드와 같이 prev_list를 사용할 수 있고, 최단 경로 갱신 시 그 최단 경로로 가기 위한 전의 점을 담으면 됩니다.
+```python
+from pprint import pprint
+import sys
+input = sys.stdin.readline
+
+vertex_num, edge_num = int(input()), int(input())
+
+
+def make_dist(vertex_num, edge_num):
+    dist_list = [[sys.maxsize] * (vertex_num) for __ in range(vertex_num)]
+    prev_list = [[-1] * (vertex_num) for __ in range(vertex_num)]
+    for i in range(vertex_num):
+        dist_list[i][i] = 0
+
+    for i in range(edge_num):
+        start, end, weight = map(int, input().split())
+        if weight < dist_list[start-1][end-1]:
+            dist_list[start-1][end-1] = weight
+            prev_list[start-1][end-1] = start
+    return dist_list, prev_list
+
+
+def Floyd_Warshall(vertex_num, dist_list):
+    for mid in range(vertex_num):
+        for row in range(vertex_num):
+            for col in range(vertex_num):
+                if dist_list[row][col] > dist_list[row][mid]+dist_list[mid][col]:
+                    dist_list[row][col] = dist_list[row][mid] + \
+                        dist_list[mid][col]
+                    prev_list[row][col] = prev_list[mid][col]
+
+
+dist_list, prev_list = make_dist(vertex_num, edge_num)
+Floyd_Warshall(vertex_num, dist_list)
+pprint(prev_list)
+
+
+for row in dist_list:
+    for dist in row:
+        if dist == sys.maxsize:
+            print(0, end=' ')
+        else:
+            print(dist, end=' ')
+    print()
+
+# prev_list에서 최단경로 뽑는 과정
+path_list = [[-1]*vertex_num for __ in range(vertex_num)]
+for row in range(vertex_num):
+    for col in range(vertex_num):
+        path_list[row][col] = []
+        path_list[row][col].append(col+1)
+        start = row
+        end = col
+        while start != end:
+            path_list[row][col].append(prev_list[start][end])
+            end = prev_list[start][end] - 1
+
+for i in range(vertex_num):
+    for j in range(vertex_num):
+        print(f'{i+1}=>{j+1}경로: {list(reversed(path_list[i][j]))}')
+
+```
