--- a/_posts/2021-08-07-BOJ_1753.md
+++ b/_posts/2021-08-07-BOJ_1753.md
@@ -29,8 +29,9 @@ toc_sticky: true
 
 ## Dijkstra
 시작노드를 기준으로 모든 노드까지의 최단 거리를 구해야 하는 문제입니다. 문제를 해결하기 위한 Dijkstra 알고리즘의 기본적인 동작은 다음과 같습니다. 시작 정점에서의 최단 거리를 담고있는 최단거리 리스트를 사용합니다.(`dist_list[vertex_num]`)
-1. 한 노드를 시작으로 인접노드를 탐색한다.
-2. 시작한 노드까지의 최단 거리 + 인접노드의 가중치를 계산한다.
+1. 큐에서 노드 한개를 꺼낸다.
+2. 꺼낸 노드까지의 거리가 현재 저장된 최단 거리보다 크면 다음 노드를 꺼낸다. (그렇지 않을 때까지)
+2. 꺼낸 노드까지의 최단 거리 + 인접노드의 가중치를 계산한다.
 3. 위의 값이 현재 인접노드가 가지고 있는 최단 거리보다 작으면 최단 거리를 갱신한다.
 4. 최단 거리를 갱신한 인접노드 중 최단 거리가 가장 짧은 노드를 다음 노드로 선정한다.  
 
@@ -62,7 +63,9 @@ def Dijkstra(graph, dist_list):
     heapq.heappush(heap, [0, vertex_start])
 
     while heap:
-        __, base_node = heapq.heappop(heap)
+        base_dist, base_node = heapq.heappop(heap)
+        if base_dist > dist_list[base_node]:
+            continue
         for next_node, weight in graph[base_node]:
             next_dist = dist_list[base_node] + weight
             if dist_list[next_node] > next_dist:
@@ -73,7 +76,7 @@ def Dijkstra(graph, dist_list):
 
 
 graph = make_graph(vertex_num, edge_num)
-dist_list = (BFS(graph, dist_list))
+dist_list = (Dijkstra(graph, dist_list))
 
 for dist in dist_list:
     print('INF' if dist == sys.maxsize else dist)
