--- a/_posts/2021-08-14-BOJ_9370.md
+++ b/_posts/2021-08-14-BOJ_9370.md
@@ -59,12 +59,14 @@ def Dijkstra(start, graph):
     heapq.heappush(heap, [0, start])
 
     while heap:
-        __, base_v = heapq.heappop(heap)
+        base_dist, base_v = heapq.heappop(heap)
+        if base_dist > dist_list[base_v]:
+            continue
         for next_v, weight in graph[base_v]:
             next_dist = dist_list[base_v]+weight
             if next_dist < dist_list[next_v]:
                 dist_list[next_v] = next_dist
-                heapq.heappush(heap, [weight, next_v])
+                heapq.heappush(heap, [next_dist, next_v])
 
     return dist_list
 
