--- a/_posts/2021-09-08-BOJ_5639.md
+++ b/_posts/2021-09-08-BOJ_5639.md
@@ -11,7 +11,7 @@ toc_sticky: true
 ## 서론
 <a href='https://www.acmicpc.net/problem/5639'>5639번: 이진 검색 트리</a>  
 
-이진 검색 트리 문제입니다. 순회 결과가 먼저 주어지고 다시 그래프를 만드는 개념도 어려웠고, 그래프를 만든 후에도 시간초과가 나서 그래프를 만들지 않고 바로 후위순회를 해야 해서 어려웠습니다.
+트리의 순회 문제입니다. 순회 결과가 먼저 주어지고 다시 그래프를 만드는 개념도 어려웠고, 그래프를 만든 후에도 시간초과가 나서 그래프를 만들지 않고 바로 후위순회를 해야 해서 어려웠습니다.
 
 ## 제한 조건
 <ul>
@@ -25,13 +25,13 @@ toc_sticky: true
 </ul>
 메모리 제한은 256MB입니다. 앞선 문제들에서 말했다시피 대부분 문제가 주어진 정보를 선언하는 데는 문제가 없습니다.
 
-## 이진 검색 트리
-이진 검색 트리는 아래와 같은 특성을 가집니다.
+## 트리의 순회
+트리의 순회는 아래와 같은 특성을 가집니다.
 1. 노드의 왼쪽 서브 트리에 있는 모든 노드의 키는 노드의 키보다 작다.
 2. 노드의 오른쪽 서브 트리에 있는 모든 노드의 키는 노드의 키보다 크다.
-3. 왼쪽, 오른쪽 서브 트리도 이진 검색 트리이다. 
+3. 왼쪽, 오른쪽 서브 트리도 트리의 순회이다. 
 
-이런 특성 때문에 이진 검색 트리는 어떠한 order가 주어졌을 때 바로 root, left, right tree를 구할 수 있고 tree를 다시 만들지 않아도 순서를 재조합하여 탐색 order를 바꿀 수 있습니다.  
+이런 특성 때문에 트리의 순회는 어떠한 order가 주어졌을 때 바로 root, left, right tree를 구할 수 있고 tree를 다시 만들지 않아도 순서를 재조합하여 탐색 order를 바꿀 수 있습니다.  
 설명하자면 root 다음 root보다 작은 숫자가 나오는 부분은 left가 되고 큰 숫자가 나오는 부분은 right가 됩니다. 이렇게 되면 이미 left, right, root을 모두 알 수 있으므로 pre, in, post order를 모두 바로 사용할 수 있습니다.
 ```python
 import sys
