--- a/_posts/2021-09-09-BOJ_2263.md
+++ b/_posts/2021-09-09-BOJ_2263.md
@@ -63,17 +63,15 @@ preorder(0, n-1, 0, n-1)
 ## 생각
 이 문제를 풀면서 크게 배운 점은 두 가지입니다.
 1. 처음 주어진 list의 부분집합을 사용하며 문제를 풀 때 함수에 부분집합 자체를 넘겨주면 안 됩니다. 함수가 호출될 때 인자를 복사해서 사용하기 때문에 쓸모없는 메모리를 엄청나게 잡아먹습니다. index를 넘겨줌으로써 list의 값을 사용해야 합니다.
-2. list의 인덱스만 넘어가기 때문에 전체 list를 사용하여 계산해야 하는 부분은 함수 바깥에서 할 수 있습니다. 처음에 inorder에서 left와 right를 구별하기 위해 root을 찾을 때 아래와 1번과 같은 방법을 사용했습니다. 하지만 이렇게 하면 모든 recursion에서 최악의 경우 n이 곱해지기 때문에 시간초과가 납니다. 따라서 root_idx는 함수 바깥에서 한 번만 n번 탐색하여 구하는 방법을 2번처럼 사용해야 합니다.
+2. list의 인덱스만 넘어가기 때문에 전체 list를 사용하여 계산해야 하는 부분은 함수 바깥에서 할 수 있습니다. 처음에 inorder에서 left와 right를 구별하기 위해 root을 찾을 때 아래와 1번과 같은 방법을 사용했습니다. 하지만 이렇게 하면 모든 recursion에서 최악의 경우 n이 곱해지기 때문에 시간초과가 납니다. 따라서 root_idx는 함수 바깥에서 한 번만 n번 탐색하여 구하는 방법을 2번처럼 사용해야 합니다.  
 ```python
 # 1번
 for i in range(ins, ine+1):
         if root == inorder[i]:
             root_idx = i
             break
-```
-```python
 # 2번
 for i in range(n):
     roots[inorder[i]] = i
 ```
-이 부분은 구현 자체는 쉽지만 사실 생각해내는 게 너무 어려웠을 것 같습니다. 이런 센스들을 한 개씩 배워나가야겠습니다.
+이런 부분들은 구현 자체는 쉽지만 사실 생각해내는 게 너무 어려웠을 것 같습니다. 이런 센스들을 한 개씩 배워나가야겠습니다.
