--- a/_posts/2021-09-29-BOJ_MST.md
+++ b/_posts/2021-09-29-BOJ_MST.md
@@ -280,4 +280,10 @@ print(wsum)
 ```
 
 ## 생각
-마지막 문제 같은 경우는 사실상 아이디어가 없으면 MST를 잘 구현해도 메모리 제한이나 시간제한에 걸려서 풀 수가 없습니다. 이런 부분의 아이디어를 떠올리는 건 어떻게 훈련해야 할까요?
+마지막 문제 같은 경우는 사실상 아이디어가 없으면 MST를 잘 구현해도 메모리 제한이나 시간제한에 걸려서 풀 수가 없습니다. 이런 부분의 아이디어를 떠올리는 건 어떻게 훈련해야 할까요?  
+
+### *추가
+17422번을 풀면서 새로운 걸 배웠습니다. 지금까지의 문제들은 모든 분리된 노드들이 연결된다는 보장이 있었기 때문에 별도의 처리를 하지 않아도 맞았지만 17422번처럼 문제의 조건에 의해서 분리된 노드들이 연결된다는 보장이 없을 수 있습니다.  
+
+이럴 때는 분리된 노드들이 MST가 될 때 간선의 개수는 N-1개라는 조건을 사용하면 됩니다. 만약 edge를 탐색하며 MST를 만들었는데 간선의 개수가 N-1일 경우 분리된 노드들 중 연결되지 않은 것이 있다는 뜻입니다.
+
