--- a/_posts/2021-10-10-BOJ_Tree.md
+++ b/_posts/2021-10-10-BOJ_Tree.md
@@ -73,7 +73,9 @@ for __ in range(Q):
 ```python
 def countSubtreeNodes(currentNode):
     for node in tree[currentNode]:
+        # 먼저 재귀를 부르고
         countSubtreeNodes(node)
+        # 그다음에 재귀로 나온 값을 사용한다.
         dp[currentNode] += dp[node]
 ```
 저는 이 부분이 조금 신기했습니다. 별거 아닐 수 있지만 제가 recursive로 코딩을 많이 안 해봐서 그런지 신기했습니다.  
