--- a/_posts/2021-10-10-BOJ_Tree.md
+++ b/_posts/2021-10-10-BOJ_Tree.md
@@ -1,7 +1,7 @@
 ---
 last_modified_at : 2021-10-10
 layout : single
-title:  "부모자식이 있는 트리 탐색"
+title:  "백준 부모자식이 있는 트리 탐색"
 categories: BOJ
 tags : [python, 트리순회, 부모자식, 루트노드]
 
