--- a/_posts/2021-10-21-OS_basic.md
+++ b/_posts/2021-10-21-OS_basic.md
@@ -3,11 +3,50 @@ last_modified_at : 2021-10-21
 layout : single
 title:  "OS 기본"
 categories: OS
-tags : [OS, 기본]
+tags : [OS, basic]
 
 toc: true
 toc_sticky: true
 ---
 ## 서론
+### 참조
+<a target = '_blank' href='https://velog.io/@lot8229/OS-OS-%EA%B0%9C%EB%85%90-%EB%B0%8F-%EA%B8%B0%EB%B3%B8-%EC%A7%80%EC%8B%9D'>[OS] 운영체제의 정리 #1</a>
+<a target = '_blank' href='https://goodmilktea.tistory.com/23'>1. 운영체제와 커널이란?</a>
+https://goodmilktea.tistory.com/23
 
-## OS란?
+## 운영체제란?
+> 사용자가 응용프로그램을 사용할 수 있는 기반 환경을 제공하여 컴퓨터를 편리하게 사용할 수 있도록 도와주고, 하드웨어를 효율적으로 사용할 수 있도록 다양한 기능을 제공하는 소프트웨어이다.
+조금 더 파자면 자원 관리자(resource Manager)라고 할 수 있다. 물리적인 자원(CPU, DRAM, Flash, Network)을 가상화 시켜서 더 효율적으로 자원을 관리 할 수 있도록 해주는 시스템이다.
+
+## 운영체제의 목적
+운영체제는 아래와 같은 목적을 가지고, 이것은 운영체제의 성능을 평가하는 기준이 된다.
+1. 처리능력(Throughput)  
+일정시간 내에 시스템이 처리하는 일의 양
+2. 반환시간(Trun Around Time)  
+시스템에 작업을 의뢰한 시간부터 처리가 완료될 때까지 걸린 시간
+3. 사용가능도(Availability)  
+시스템을 사용할 필요가 있을 때 즉시 사용할 수 있는 정도
+4. 신뢰도(Reliability)  
+시스템이 주어진 문제를 정확하게 해결하는 정도
+
+## 운영체제의 기능
+결과적으로 운영체제의 핵심은 자원을 어떻게 효율적으로 관리할 것인가입니다.
+### CPU 스케줄링
+1. 선입선출(First Come First Served)  
+먼저 CPU에 도착한 프로세스를 먼저 처리해주는 방식, 먼저 CPU를 요청한 프로세스가 작업이 끝날 때까지 다른 프로세스들은 작업을 할 수 없다. 이 방법은 CPU는 효율적으로 계속 작업은 할 수 있으나 전체적인 프로세스를 처리하는 면에서는 비효율적인 방법이다.
+2. 라운드 로빈(Round Robin)  
+선입선출의 방법을 보완하고자 나온 방법 스케줄링 기법. 이 기법에서는 CPU를 한 번 할당받아 사용할 수 있는 시간을 일정한 고정된 시간으로 제한한다. 긴 작업이 필요한 프로세스가 CPU를 받더라도 정해진 시간이 지나면 CPU를 내어놓고 다시 큐의 마지막으로 들어가서 기다려야 한다. 이렇게 되면 뒤의 프로세스들이 무작정 오래 기다려야 하는 상황은 막을 수 있다.
+3. 우선순위(Priority)  
+이 기법은 수행 대기 중인 프로세스들에게 프로그램에 따라 우선순위를 부여하고 우선순위가 높은 프로세스에게 CPU를 먼저 할당하는 방법이다. 또한 지나치게 오래 기다리는 프로세스가 발생하지 않도록, 기다린 시간이 늘어날수록 우선순위를 점차 높여주는 방안도 사용할 수 있다.
+
+### 메모리 관리
+1. 고정 분할(fixed partion)  
+물리적 메모리를 몇 개의 영구적인 분할로 나눈다. 나뉜 각각의 분할에는 하나의 프로그램이 적재된다. 이 방식은 단순해서 분할의 크기보다 큰 프로그램은 적재할 수 없다. 이렇기 때문에 메모리의 효율적인 사용 측면에서도 바람직하지 않다.
+2. 가변 분할(variable partion)  
+매 시점 프로그램의 크기에 맞게 메모리를 분할해서 사용하는 방식이다. 따라서 큰 프로그램의 실행이 제한되는 문제는 발생하지 않는다. 그러나 물리적 메모리 크기보다 더 큰 프로그램의 실행은 여전히 불가능하다.
+3. 가상 메모리(virtual memory)  
+최근에 거의 모든 컴퓨터 시스템에서 사용하는 메모리 관리 기법이다. 가상 메모리 기법에서는 물리적 메모리보다 더 큰 프로그램이 실행되는 것을 지원한다. 이때 실행될 수 있는 프로그램의 크기는 가상 메모리의 크기에 의해 결정된다. 운영체제는 물리적인 주소와 가상 메모리에 주소를 매핑하여 관리한다. 실제 이렇게 가상 메모리를 할당할 수 있게 하는 것은 실행되지 않는 부분의 프로그램은 보조 디스크에 두었다가 필요할 때 메모리에 적재하는 방식이다. 이때 그리고 보조 기억장치에서 사용되는 부분을 스왑 영역이라고 한다.
+
+### 주변 장치 및 입출력 장치
+CPU나 메모리와 달리 인터럽트라는 메커니즘을 통해 관리한다. 주변 장치들은 CPU의 서비스가 필요한 경우에 신호를 발생시켜서 서비스를 요청하게 되는데 이때 발생시키는 신호를 인터럽트라고 한다. CPU는 평소에 CPU 스케줄링에 따라 작업을 수행하고 있다가 인터럽트가 발생하면 하던 일을 잠시 멈추고 인터럽트에 의한 요청 서비스를 수행한다.  
+주변 장치들은 장치마다 그 장치에서 일어나는 업무에 대한 관리를 위한 일종의 작은 CPU를 가진다. 이를 컨트롤러라고 하는데 이것을 바탕으로 무언가 입력이 되면 CPU에게 인터럽트를 발생시켜 보고하는 역할을 한다. 그러면 CPU는 하던 일을 잠시 멈추고 인터럽트에 대한 처리를 하기 위해 운영체제로 할당이 넘어간다.
