--- a/_posts/2021-10-21-OS_basic.md
+++ b/_posts/2021-10-21-OS_basic.md
@@ -20,11 +20,11 @@ https://goodmilktea.tistory.com/23
 
 ## 운영체제의 목적
 운영체제는 아래와 같은 목적을 가지고, 이것은 운영체제의 성능을 평가하는 기준이 된다.
-1. 처리능력(Throughput)  
+1. 처리량(Throughput)  
 일정시간 내에 시스템이 처리하는 일의 양
-2. 반환시간(Trun Around Time)  
+2. 지연, 응답시간(Trun Around Time)  
 시스템에 작업을 의뢰한 시간부터 처리가 완료될 때까지 걸린 시간
-3. 사용가능도(Availability)  
+3. 사용 가능도(Availability)  
 시스템을 사용할 필요가 있을 때 즉시 사용할 수 있는 정도
 4. 신뢰도(Reliability)  
 시스템이 주어진 문제를 정확하게 해결하는 정도
@@ -50,3 +50,11 @@ https://goodmilktea.tistory.com/23
 ### 주변 장치 및 입출력 장치
 CPU나 메모리와 달리 인터럽트라는 메커니즘을 통해 관리한다. 주변 장치들은 CPU의 서비스가 필요한 경우에 신호를 발생시켜서 서비스를 요청하게 되는데 이때 발생시키는 신호를 인터럽트라고 한다. CPU는 평소에 CPU 스케줄링에 따라 작업을 수행하고 있다가 인터럽트가 발생하면 하던 일을 잠시 멈추고 인터럽트에 의한 요청 서비스를 수행한다.  
 주변 장치들은 장치마다 그 장치에서 일어나는 업무에 대한 관리를 위한 일종의 작은 CPU를 가진다. 이를 컨트롤러라고 하는데 이것을 바탕으로 무언가 입력이 되면 CPU에게 인터럽트를 발생시켜 보고하는 역할을 한다. 그러면 CPU는 하던 일을 잠시 멈추고 인터럽트에 대한 처리를 하기 위해 운영체제로 할당이 넘어간다.
+
+## 운영체제의 유형
+1. 일괄처리 시스템(batch processing system)
+2. 다중 프로그래밍 시스템(multiprogramming system)
+3. 시분할 시스템(time sharing system)
+4. 다중 처리 시스템(multiprocessing system)
+5. 실시간 처리 시스템(real time processing system)
+6. 분산 처리 시스템(distributed processing system)
