--- a/_posts/2021-10-21-OS_basic.md
+++ b/_posts/2021-10-21-OS_basic.md
@@ -11,7 +11,9 @@ toc_sticky: true
 ## 서론
 ### 참조
 <a target = '_blank' href='https://velog.io/@lot8229/OS-OS-%EA%B0%9C%EB%85%90-%EB%B0%8F-%EA%B8%B0%EB%B3%B8-%EC%A7%80%EC%8B%9D'>[OS] 운영체제의 정리 #1</a>  
-<a target = '_blank' href='https://goodmilktea.tistory.com/23'>1. 운영체제와 커널이란?</a>
+<a target = '_blank' href='https://goodmilktea.tistory.com/23'>1. 운영체제와 커널이란?</a>  
+<a target = '_blank' href='https://vmilsh.tistory.com/373'>운영체제를 이해하기 위해 필요한 기본 개념들</a>  
+<a target = '_blank' href='https://jiminon5.tistory.com/11'>운영체제의 유형</a>
 
 ## 운영체제란?
 > 사용자가 응용프로그램을 사용할 수 있는 기반 환경을 제공하여 컴퓨터를 편리하게 사용할 수 있도록 도와주고, 하드웨어를 효율적으로 사용할 수 있도록 다양한 기능을 제공하는 소프트웨어이다.
@@ -29,7 +31,7 @@ toc_sticky: true
 시스템이 주어진 문제를 정확하게 해결하는 정도
 
 ## 운영체제의 기능
-결과적으로 운영체제의 핵심은 자원을 어떻게 효율적으로 관리할 것인가입니다.
+결과적으로 운영체제의 핵심은 자원을 어떻게 효율적으로 관리할 것인가이다. 이를 자원관리 기능이라고 한다. (그 외 기타기능으로는 시스템보호, 네트워킹, 명령해석기와시스템관리 등이 있다.)
 ### CPU 스케줄링
 1. 선입선출(First Come First Served)  
 먼저 CPU에 도착한 프로세스를 먼저 처리해주는 방식, 먼저 CPU를 요청한 프로세스가 작업이 끝날 때까지 다른 프로세스들은 작업을 할 수 없다. 이 방법은 CPU는 효율적으로 계속 작업은 할 수 있으나 전체적인 프로세스를 처리하는 면에서는 비효율적인 방법이다.
@@ -50,10 +52,18 @@ toc_sticky: true
 CPU나 메모리와 달리 인터럽트라는 메커니즘을 통해 관리한다. 주변 장치들은 CPU의 서비스가 필요한 경우에 신호를 발생시켜서 서비스를 요청하게 되는데 이때 발생시키는 신호를 인터럽트라고 한다. CPU는 평소에 CPU 스케줄링에 따라 작업을 수행하고 있다가 인터럽트가 발생하면 하던 일을 잠시 멈추고 인터럽트에 의한 요청 서비스를 수행한다.  
 주변 장치들은 장치마다 그 장치에서 일어나는 업무에 대한 관리를 위한 일종의 작은 CPU를 가진다. 이를 컨트롤러라고 하는데 이것을 바탕으로 무언가 입력이 되면 CPU에게 인터럽트를 발생시켜 보고하는 역할을 한다. 그러면 CPU는 하던 일을 잠시 멈추고 인터럽트에 대한 처리를 하기 위해 운영체제로 할당이 넘어간다.
 
+### 파일관리
+
 ## 운영체제의 유형
-1. 일괄처리 시스템(batch processing system)
-2. 다중 프로그래밍 시스템(multiprogramming system)
-3. 시분할 시스템(time sharing system)
-4. 다중 처리 시스템(multiprocessing system)
-5. 실시간 처리 시스템(real time processing system)
-6. 분산 처리 시스템(distributed processing system)
+1. 일괄처리 시스템(batch processing system)  
+한 번에 한작업씩 순서대로 처리하는 시스템이다.
+2. 다중 프로그래밍 시스템(multiprogramming system)  
+운영체제가 여러 작업을 메모리에 적재한 후 CPU를 나눠쓰게 하는 시스템이다. 한 프로세스가 입출력을 실행하는 동안 다른 프로세스에 CPU를 할당하여 실행시킬 수 있다. 다중프로그래밍에서는 CPU가 항상 할 일이 있다.
+3. 시분할 시스템(time sharing system)  
+다중프로그래밍을 논리적으로 확장한 개념, 프로세스 스케줄링과 다중 프로그래밍을 사용해 각 사용자에게 컴퓨터의 CPU를 시간적으로 분할하여 나눠준다. 사용자가 혼자 컴퓨터를 사용하는 것과 같은 효과를 준다.
+4. 다중 처리 시스템(multiprocessing system)  
+병렬처리 시스템이라고도 한다. 여러 개의 프로세서를 이용해 신뢰성, 가용성, 컴퓨터 능력 향상 등의 목적을 달성한다.
+5. 실시간 처리 시스템(real time processing system)  
+실시간 시스템이란 한정된 시간 제약조건 상에서 작업을 처리해야 하는 시스템이다. 이 시스템은 시간 제한성이 중요하다.
+6. 분산 처리 시스템(distributed processing system)  
+시스템마다 운영체제와 메모리를 가지고 독립적으로 운영되며 필요할 때 통신하는 시스템, 최근에는 자원공유, 연산 속도 향상, 신뢰성과 통신 때문에 여러 개의 물리적 프로세서에 연산을 분산하는 경향이 있다.
