--- a/_posts/2021-11-04-OS_LRU.md
+++ b/_posts/2021-11-04-OS_LRU.md
@@ -9,13 +9,11 @@ toc: true
 toc_sticky: true
 ---
 ## 서론
-지금은 취업 준비 중인데요. 면접에서 LRU를 구현하려면 어떻게 할 것이냐는 질문에 페이지마다 타임카운터 같은 것을 달아서 새로 들어온 페이지는 0으로 두고 페이지가 들어올 때마다 타임카운터를 1씩 올려서 교체 시에 타임 계산대가 가장 큰 페이지를 버리겠다고 대답했었습니다.  
+지금은 취업 준비 중인데요. 면접에서 LRU를 구현하려면 어떻게 할 것이냐는 질문에 페이지마다 타임 카운터 같은 것을 달아서 새로 들어온 페이지는 0으로 두고 페이지가 들어올 때마다 타임 카운터를 1씩 올려서 교체 시에 타임 카운터가 가장 큰 페이지를 버리겠다고 대답했었습니다.  
   
-이 방법은 타임카운터를 한 개씩 올리는 것도 그렇고 타임카운터가 가장 큰 페이지를 찾는 탐색도 그렇고 시간복잡도 O(n)를 가집니다. 더 효과적인 방법이 없냐고 질문하셔서 대답을 못 했습니다.  
+이 방법은 타임 카운터를 한 개씩 올리는 것도 그렇고 타임 카운터가 가장 큰 페이지를 찾는 탐색도 그렇고 시간복잡도 O(n)을 가집니다. 더 효과적인 방법이 없냐고 질문하셔서 대답을 못 했습니다.  
   
-그래서 면접이 끝나고 찾아보니 링크드 리스트와 해쉬맵을 사용해서 LRU를 O(1)로 구현하는 방법이 있었습니다. 더 효과적인걸 물어보셨어서 줄이면 O(logn)이 되지 않을까 생각했었는데 O(1)의 방법을 사용하고 있다니 신기했습니다.
-
-### 참조
+그래서 면접이 끝나고 찾아보니 링크드 리스트와 해쉬맵을 사용해서 LRU를 O(1)로 구현하는 방법이 있었습니다. 더 효과적인걸 물어보셨어서 줄이면 O(logn)정도가 되지 않을까 생각했었는데 O(1)의 방법을 사용하고 있다니 신기했습니다.
 
 
 ## 방법
