--- a/_posts/2021-11-04-OS_LRU.md
+++ b/_posts/2021-11-04-OS_LRU.md
@@ -87,6 +87,35 @@ while key != None:
 
 # 결과: 5, 2, 6, 7, 8
 ```
+```cmd
+prev: None
+key: head 
+next: 5   
+
+prev: head
+key: 5    
+next: 2   
+
+prev: 5   
+key: 2    
+next: 6   
+
+prev: 2   
+key: 6    
+next: 7
+
+prev: 6
+key: 7
+next: 8
+
+prev: 7
+key: 8
+next: tail
+
+prev: 8
+key: tail
+next: None
+```
 
 ## 생각
 면접 질문 하나로 배열, 링크드 리스트, 해쉬맵, 운영체제까지 이번에 공부가 정말 많이 됐습니다. 다음번에는 더 잘 대답할 수 있을 것 같습니다.
