--- a/_posts/2021-11-04-OS_LRU.md
+++ b/_posts/2021-11-04-OS_LRU.md
@@ -117,5 +117,27 @@ key: tail
 next: None
 ```
 
+## 시간복잡도
+시간 복잡도를 확인하기 위해서 다음과 같이 page 리스트 길이를 10배씩 하면서 실험해보았습니다. 결괏값이 리스트 길이 10배마다 10배가 되는 것처럼 보여서 시간복잡도가 O(n)처럼 보이지만 여기서 n은 <code>for i in page:</code>를 탐색할 때 나오는 n입니다. 즉 반복문 아래로의 코드는 O(1)의 시간복잡도를 가지기 때문에 전체 시간복잡도 O(n)이 나옵니다. 결론적으로 LRU를 링크드 리스트와, 해쉬맵을 통해서 구현하면 시간복잡도 O(1)을 얻을 수 있습니다.
+```python
+lru = LRU(10)
+
+page = []
+for i in range(1, 100): # 100~10000000
+    page.append(random.randint(1, 11))
+start = time.time()
+for i in page:
+    lru.put(node(i))
+print(f'LRU\tn=100\t\ttime: {time.time()-start:.5f}')
+```
+```cmd
+LRU     n=100           time: 0.00000
+LRU     n=1000          time: 0.00199
+LRU     n=10000         time: 0.01795
+LRU     n=100000        time: 0.17903
+LRU     n=1000000       time: 1.78895
+LRU     n=10000000      time: 17.56030
+```
+
 ## 생각
 면접 질문 하나로 배열, 링크드 리스트, 해쉬맵, 운영체제까지 이번에 공부가 정말 많이 됐습니다. 다음번에는 더 잘 대답할 수 있을 것 같습니다.
