STYLE: Refactoring category tag STYLE: Change category tag

--- a/_posts/2021-07-20-BOJ_6549.md
+++ b/_posts/2021-07-20-BOJ_6549.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-07-20
 layout : single
 title:  "백준 6549번 분할정복, 스택"
 categories: BOJ
-tags : [python, 6549번, 분할정복, 스택]
+tags : [6549번, python, 분할정복, 스택]
 
 toc: true
 toc_sticky: true
