--- a/_posts/2021-07-21-BOJ_2261.md
+++ b/_posts/2021-07-21-BOJ_2261.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-07-21
 layout : single
 title:  "백준 2261번 분할정복"
 categories: BOJ
-tags : [python, 2261번, 분할정복]
+tags : [2261번, python, 분할정복]
 
 toc: true
 toc_sticky: true
