--- a/_posts/2021-07-30-BOJ_7576.md
+++ b/_posts/2021-07-30-BOJ_7576.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-07-30
 layout : single
 title:  "백준 7576번 BFS"
 categories: BOJ
-tags : [python, 7576번, BFS]
+tags : [7576번, python, BFS]
 
 toc: true
 toc_sticky: true
