--- a/_posts/2021-07-31-BOJ_1697.md
+++ b/_posts/2021-07-31-BOJ_1697.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-07-31
 layout : single
 title:  "백준 1697번 BFS"
 categories: BOJ
-tags : [python, 1697번, BFS]
+tags : [1697번, python, BFS]
 
 toc: true
 toc_sticky: true
