--- a/_posts/2021-08-03-BOJ_16940.md
+++ b/_posts/2021-08-03-BOJ_16940.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-08-03
 layout : single
 title:  "백준 16940번 BFS"
 categories: BOJ
-tags : [python, 16940번, BFS]
+tags : [16940번, python, BFS]
 
 toc: true
 toc_sticky: true
