--- a/_posts/2021-08-07-BOJ_1753.md
+++ b/_posts/2021-08-07-BOJ_1753.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-08-07
 layout : single
 title:  "백준 1753번 Dijkstra"
 categories: BOJ
-tags : [python, 1753번, Dijkstra]
+tags : [1753번, python, Dijkstra]
 
 toc: true
 toc_sticky: true
