--- a/_posts/2021-08-10-RL_mario.md
+++ b/_posts/2021-08-10-RL_mario.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-08-10
 layout : single
 title:  "DQN을 통한 mario게임 학습"
 categories: ML
-tags : [강화학습, DQN, Mario]
+tags : [RL, 강화학습, DQN, Mario]
 
 toc: true
 toc_sticky: true
