--- a/_posts/2021-08-14-BOJ_11657.md
+++ b/_posts/2021-08-14-BOJ_11657.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-08-14
 layout : single
 title:  "백준 11657번 Bellman-Ford"
 categories: BOJ
-tags : [python, 11657번, Bellman-Ford]
+tags : [11657번, python, Bellman-Ford]
 
 toc: true
 toc_sticky: true
