--- a/_posts/2021-08-14-BOJ_9370.md
+++ b/_posts/2021-08-14-BOJ_9370.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-08-14
 layout : single
 title:  "백준 9370번 Dijkstra"
 categories: BOJ
-tags : [python, 9370번, Dijkstra]
+tags : [9370번, python, Dijkstra]
 
 toc: true
 toc_sticky: true
