--- a/_posts/2021-08-17-BOJ_1450.md
+++ b/_posts/2021-08-17-BOJ_1450.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-08-17
 layout : single
 title:  "백준 1450번 meet in the middle"
 categories: BOJ
-tags : [python, 1644번, meet in the middle]
+tags : [1644번, python, meet in the middle]
 
 toc: true
 toc_sticky: true
