--- a/_posts/2021-08-23-BOJ_9252.md
+++ b/_posts/2021-08-23-BOJ_9252.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-08-23
 layout : single
 title:  "백준 9252번 LCS"
 categories: BOJ
-tags : [python, 9252번, LCS]
+tags : [9252번, python, LCS]
 
 toc: true
 toc_sticky: true
@@ -90,4 +90,3 @@ for i in range(len(b)+1):
         else:
             LCS[i][j] = 0
 ```
-
