--- a/_posts/2021-08-25-BOJ_1991.md
+++ b/_posts/2021-08-25-BOJ_1991.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-08-25
 layout : single
 title:  "백준 1991번 트리 순회"
 categories: BOJ
-tags : [python, 1991번, 트리 순회]
+tags : [1991번, python, 트리 순회]
 
 toc: true
 toc_sticky: true
@@ -178,4 +178,3 @@ postorder(graph)
 
 ## 생각
 재귀함수 자체가 스택이라는 말이 컴퓨터에서 프로그램을 실행할 때 구조 자체가 스택이라는 뜻인데 이 부분이 저도 정확하게 기억이 나지 않아서 제대로 설명할 수가 없습니다. 다시 공부하도록 하겠습니다.
-
