--- a/_posts/2021-09-01-C#.md
+++ b/_posts/2021-09-01-C#.md
@@ -2,8 +2,8 @@
 last_modified_at : 2021-09-01
 layout : single
 title:  "C#"
-categories: Cs
-tags : [Unity]
+categories: Unity
+tags : [C#]
 
 toc: true
 toc_sticky: true
