--- a/_posts/2021-09-05-BOJ_1167.md
+++ b/_posts/2021-09-05-BOJ_1167.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-09-05
 layout : single
 title:  "백준 1167번 트리의 지름"
 categories: BOJ
-tags : [python, 1167번, 1967번, 트리]
+tags : [1167번, 1967번, python, 트리]
 
 toc: true
 toc_sticky: true
