--- a/_posts/2021-09-09-BOJ_2263.md
+++ b/_posts/2021-09-09-BOJ_2263.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-09-09
 layout : single
 title:  "백준 2263번 트리의 순회"
 categories: BOJ
-tags : [python, 2263번, 트리의 순회]
+tags : [2263번, python, 트리의 순회]
 
 toc: true
 toc_sticky: true
