--- a/_posts/2021-10-10-BOJ_Tree.md
+++ b/_posts/2021-10-10-BOJ_Tree.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-10-10
 layout : single
 title:  "백준 부모자식이 있는 트리 탐색"
 categories: BOJ
-tags : [python, 트리순회, 부모자식, 루트노드]
+tags : [트리순회, python, 부모자식, 루트노드]
 
 toc: true
 toc_sticky: true
