--- a/_posts/2021-11-04-OS_LRU.md
+++ b/_posts/2021-11-04-OS_LRU.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-11-04
 layout : single
 title:  "OS LRU 파이썬 구현"
 categories: OS
-tags : [OS, LRU, python]
+tags : [LRU, python]
 
 toc: true
 toc_sticky: true
