--- a/_posts/2021-08-08-RL_gym.md
+++ b/_posts/2021-08-08-RL_gym.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-08-08
 layout : single
 title:  "강화학습 env을 제공해주는 gym 모듈"
 categories: ML
-tags : [강화학습, env, gym, CartPole]
+tags : [강화학습, env, gym]
 
 toc: true
 toc_sticky: true
