--- a/_posts/2021-08-14-BOJ_11404.md
+++ b/_posts/2021-08-14-BOJ_11404.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-08-16
 layout : single
 title:  "백준 11657번 Floyd-Warshall"
 categories: BOJ
-tags : [python, 11657번, Floyd-Warshall]
+tags : [11657번, python, Floyd-Warshall]
 
 toc: true
 toc_sticky: true
