--- a/_posts/2021-08-17-BOJ_1644.md
+++ b/_posts/2021-08-17-BOJ_1644.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-08-17
 layout : single
 title:  "백준 1644번 Two Pointer"
 categories: BOJ
-tags : [python, 1644번, Two Pointer]
+tags : [1644번, python, Two Pointer]
 
 toc: true
 toc_sticky: true
