--- a/_posts/2021-08-21-BOJ_14003.md
+++ b/_posts/2021-08-21-BOJ_14003.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-08-21
 layout : single
 title:  "백준 14003번 LIS"
 categories: BOJ
-tags : [python, 14003번, LIS]
+tags : [14003번, python, LIS]
 
 toc: true
 toc_sticky: true
