--- a/_posts/2021-09-08-BOJ_5639.md
+++ b/_posts/2021-09-08-BOJ_5639.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-09-08
 layout : single
 title:  "백준 5639번 이진 검색 트리"
 categories: BOJ
-tags : [python, 5639번,이진 검색 트리]
+tags : [5639번,python, 이진 검색 트리]
 
 toc: true
 toc_sticky: true
