--- a/_posts/2021-10-21-OS_basic.md
+++ b/_posts/2021-10-21-OS_basic.md
@@ -3,7 +3,7 @@ last_modified_at : 2021-10-21
 layout : single
 title:  "OS 기본"
 categories: OS
-tags : [OS, basic]
+tags : [study]
 
 toc: true
 toc_sticky: true
